assets/css/main.scss
---
---

@charset "utf-8";

/* Definition/override of global variables before importing original stylesheets */
$link-color: rgb(90, 0, 0);
$masthead-link-color: $link-color;
$body-color: #222;
$link-color-contrast: white;
$font-zendots: "Zen Dots", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
$font-keaniaone: "Keania One", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;

@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
@import "minimal-mistakes"; // main partials

/*******************/
/*  Custom Styles  */
/*******************/
  
/* Header */
.masthead {
  height: 3em;
}
.masthead__inner-wrap {
  padding: 0 0.5em 0 0;
  height: 3em;
}
.navicon, .navicon:before, .navicon:after {
  background: $link-color-contrast;
}
.greedy-nav__toggle:hover {
  background-color: $link-color-contrast;
}
.masthead, .greedy-nav {
  background-color: $link-color;
}
.greedy-nav a {
  color: $link-color-contrast;
}
.greedy-nav .visible-links a:hover {
  color: $link-color-contrast;
}
.greedy-nav .visible-links a:before {
  background: $link-color-contrast;
}
/* Site Title */
.site-title {
/* disabled
  font-family: $font-zendots;
  -webkit-text-stroke: 1px $link-color;
  -webkit-text-fill-color: $link-color-contrast;
  border: 2px solid $link-color;
  font-size: 1.5em;
  border-radius: 5px;
  padding: 0em 0.5em;
*/
  font-family: $font-keaniaone;
  -webkit-text-stroke: 1px $link-color;
  -webkit-text-fill-color: $link-color-contrast;
  border: 2px solid $link-color-contrast;
  font-size: 1.5em;
  background: $link-color;
  color: $link-color-contrast;
  border-radius: 2px;
  padding: 0.2em 0.5em;
  height: 2em;
  position: absolute;
  top: 0;
  left: 0;
  box-shadow: 0 0 1px 2px $link-color;
}
i.fa-search {
  color: $link-color-contrast;
}

/* Blockquotes */
blockquote {
  font-style: normal; // this allows us to set a source in italic using markdown
  border-left: 0.25em solid $link-color;
}

/* Adjusting links */
a.current {
  color: $link-color;
}
h2.archive__item_title a {
  font-size: 1em;
  color: $link-color;
}
.toc .nav__title {
  background: $link-color;
}
.pagination--pager:hover {
  background-color: $link-color;
}
.pagination--pager {
  padding: 0.25em 1em;
}
.page__content+.pagination, .page__meta+.pagination, .comment__date+.pagination, .page__share+.pagination, .page__comments+.pagination {
  margin-top: 1em;
  padding-top: 1em;
}

/* Text font size */
.page__content {
  font-size: 0.8em;
}

/* Footer */
.page__footer {
  background: $link-color;
  margin-top: 0.5em;
}
.page__footer footer {
  margin-top: 0.25em;
  max-width: 100%;
  padding: 0 1em 0.25em;
}
@media screen and (min-width: 800px) {
  .page__footer-follow {
    float: left;
    padding-top: 0.25em;
  }
  .page__footer-copyright {
    float: right; // .footer::after has 'clear: both;' set
    margin-top: 0.75em;
  }
}

